--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
     <div class="menu">
       <main>
         <h1>Coffe House</h1>
-        <img src="icon.png" />
+        <img src="icon.png" alt="coffee icon"/>
         <p class="established">Est. 2024</p>
         <hr>
         <section>
@@ -51,10 +51,7 @@
       </main>
       <hr class="bottom-line">
       <footer>
-        <p>
-          <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a>
-        </p>
-        <p class="address">123 Free Code Camp Drive</p>
+        <p >Thank you for visiting our shop</p>
       </footer>
     </div>
   </body>
